tests/invalid/call_missing_arg/main.py
def add(a: int, b: int) -> int:
    return a + b


def run_case() -> None:
    add(1)

if __name__ == "__main__":
    run_case()
